# blas-array2

./: .gitignore  Cargo.toml  README.md  codecov.yml  rustfmt.toml  tarpaulin.toml
.github/workflows/: rust-publish.yml  rust.yml
demo-efficiency/: Cargo.toml  build_aocl.env  build_mkl.env  build_openblas.env
demo-efficiency/src/: dgemm.rs  dsyrk.rs  main.rs
docs-markdown/: demo_efficiency.md  dev.md  func.md
scripts/: bindgen.py  blas.h
src/: lib.rs  prelude.rs  util.rs
src/blas1/: asum.rs  iamax.rs  mod.rs  nrm2.rs
src/blas2/: gbmv.rs  gemv.rs  ger.rs  gerc.rs  hbmv.rs  hemv.rs  her.rs  her2.rs  hpmv.rs  hpr.rs  hpr2.rs  mod.rs  sbmv.rs  spmv.rs  spr.rs  spr2.rs  symv.rs  syr.rs  syr2.rs  tbmv.rs  tbsv.rs  tpmv.rs  tpsv.rs  trmv.rs  trsv.rs
src/blas3/: gemm.rs  gemmt.rs  hemm.rs  her2k.rs  herk.rs  mod.rs  symm.rs  syr2k.rs  syrk.rs  trmm.rs  trsm.rs
src/ffi/: blas.rs  mod.rs
src/util/: blas_error.rs  blas_flags.rs  blas_traits.rs  mod.rs  util_ndarray.rs
tests/: mod.rs  taguchi.py  test_asum.rs  test_gemm.rs  test_symm.rs  util.rs
tests/blas1/: mod.rs  test_asum.rs  test_iamax.rs  test_nrm2.rs
tests/blas2/: macro_gen_gbmv.py  macro_gen_gemv.py  macro_gen_hbmv.py  macro_gen_tbmv.py  mod.rs  test_gbmv.rs  test_gemv.rs  test_ger.rs  test_gerc.rs  test_hbmv.rs  test_sbmv.rs  test_spmv.rs  test_spr.rs  test_spr2.rs  test_symv.rs  test_syr.rs  test_syr2.rs  test_tbmv.rs  test_tbsv.rs  test_tpmv.rs  test_tpsv.rs  test_trmv.rs  test_trsv.rs
tests/blas3/: macro_gen_gemm.py  macro_gen_symm.py  macro_gen_syr2k.py  macro_gen_syrk.py  macro_gen_trmm.py  mod.rs  test_gemm.rs  test_gemmt.rs  test_symm.rs  test_syr2k.rs  test_syrk.rs  test_trmm.rs  test_trsm.rs
