[package]
name = "blas-array2"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "Implementation of parameter-optional BLAS2 and BLAS3 wrapper by `ndarray::Array` (`Ix1` or `Ix2`)."

[dependencies]
num-traits = { version = "0.2" }
derive_builder = { version = "0.20" }
libc = { version = "0.2" }
blas-sys = { version = "0.7" }
ndarray = { version = "0.15" }
num-complex = { version = "0.4" }

[dev-dependencies]
rand = { version = "0.8" }
itertools = { version = "0.13" }
approx = { version = "0.5" }
cblas-sys = { version = "0.1" }
